Revision history for Mojolicious-Plugin-Web-Auth-Site-Reddit

{{$NEXT}}
    - Example script has been moved to bin/reddit-oauth.
    - reddit-oauth now displays refresh_token as part of web output.

0.000002  2017-01-15 23:37:36-05:00 America/Toronto
    - Docs now make clear which URLs user needs to provide.
    - user_info is now fetched as part of auth process.

0.000001  2017-01-15 20:48:54-05:00 America/Toronto
    - Initial release.