@@ -3,6 +3,7 @@ Revision history for Mojolicious-Plugin-Web-Auth-Site-Reddit
 {{$NEXT}}
     - Example script has been moved to bin/reddit-oauth.
     - reddit-oauth now displays refresh_token as part of web output.
+    - Docs added to show how to get a refresh_token.
 
 0.000002  2017-01-15 23:37:36-05:00 America/Toronto
     - Docs now make clear which URLs user needs to provide.
